force-app/main/default/objects/EPIC_Access__c/EPIC_Access__c.object-meta.xml
<CustomObject>
    <label>EPIC Access</label>
    <nameField>
        <label>EPIC Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epic Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>