force-app/main/default/objects/EPIC_Access__c/fields/Expires_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Expires_In_Seconds__c</fullName>
    <label>Expires In Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>