force-app/main/default/objects/EPIC_Access__c/fields/ExpiresWhen__c.field-meta.xml
<CustomField>
    <fullName>ExpiresWhen__c</fullName>
    <label>ExpiresWhen</label>
    <type>DateTime</type>
</CustomField>